--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "1.0.0",
   "description": "Obox technical assessment",
   "private": true,
+  "type": "module",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "playwright test",
     "compile-sass": "node-sass src/assets/styles/main.scss src/assets/styles/main.css"
   },
   "author": "Karl Hohls",
   "license": "ISC",
   "devDependencies": {
-    "node-sass": "^9.0.0"
+    "@playwright/test": "^1.42.1",
+    "node-sass": "^9.0.0",
+    "playwright": "^1.42.1"
   }
 }
