Add PHP init tests and add to tests command in package.json

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "playwright test",
+    "test": "playwright test && vendor/bin/phpunit api/tests",
     "compile-sass": "node-sass src/assets/styles/main.scss src/assets/styles/main.css"
   },
   "author": "Karl Hohls",
